Video player: Make cursor tooltip position fixed
So that it deals correctly with scrolling the page.

Say your cursor is at x, y -- if you scroll, your cursor will still be at the same position relative to the viewport, which is position "fixed" does.

Test Plan:
Make the window really small, so we have a scrollbar.
Mouse mouse over video, check the tooltip follows it correctly.
Check that scrolling also keeps the tooltip at the right position


Reviewers: flooey, mhtien

Reviewed By: mhtien

Pull Request: https://github.com/getcord/monorepo/pull/6362

monorepo-commit: 3efcc85216fc1502a710d1f13fd70dd659c5771d

--- a/video-player/src/css/index.css
+++ b/video-player/src/css/index.css
@@ -172,7 +172,7 @@ video {
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
-  position: absolute;
+  position: fixed;
   padding: 4px 8px 5px 8px;
   border-radius: 2px 11px 11px 11px;
   background: var(--purple);
